<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProjectFrame</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="left_menu_home">首页</string>
    <string name="left_menu_about">关于我们</string>
    <string name="left_menu_setting">软件设置</string>
    <string name="main_index_home">首页</string>
    <string name="main_index_moments">动态</string>
    <string name="main_index_order">订单</string>
    <string name="main_index_center">我的</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_bai_du_map">BaiDuMapActivity</string>
    <string name="title_activity_main_activity_no_sliding">MainActivityNoSliding</string>
    <string name="title_activity_dialog_list">DialogListActivity</string>

    <!--page title-->
    <string name="title_mydialog">自定义对话框</string>

    <!--dialog string-->
    <string name="dialog_title">提示</string>
    <string name="dialog_message">您确定要执行此操作吗？</string>
    <string name="dialog_confirm">确认</string>
    <string name="dialog_cancel">取消</string>

</resources>
