<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dip"
    android:paddingLeft="20dip"
    android:background="@drawable/slidingmenu_left_bg"
    android:orientation="vertical">

    <LinearLayout
        style="@style/ll_layout_slidingmenu_left"
        android:id="@+id/ll_menu_home">
        <ImageView
            style="@style/iv_layout_slidingmenu_left"
            android:background="@drawable/leftmenu_home"/>
        <TextView
            style="@style/tv_layout_slidingmenu_left"
            android:text="@string/left_menu_home" />
    </LinearLayout>

    <LinearLayout
        style="@style/ll_layout_slidingmenu_left"
        android:id="@+id/ll_menu_setting">
        <ImageView
            style="@style/iv_layout_slidingmenu_left"
            android:background="@drawable/leftmenu_setting"/>
        <TextView
            style="@style/tv_layout_slidingmenu_left"
            android:text="@string/left_menu_setting" />
    </LinearLayout>

    <LinearLayout
        style="@style/ll_layout_slidingmenu_left"
        android:id="@+id/ll_menu_about">
        <ImageView
            style="@style/iv_layout_slidingmenu_left"
            android:background="@drawable/leftmenu_about"/>
        <TextView
            style="@style/tv_layout_slidingmenu_left"
            android:text="@string/left_menu_about" />
    </LinearLayout>
</LinearLayout>