<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/mainColor">
        <TextView
            android:id="@+id/tv_title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/title_textSize"
            android:textColor="@color/my_white"
            android:text="@string/left_menu_home"/>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:id="@+id/content" >
    </FrameLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/line_top">
        <LinearLayout
            android:id="@+id/ll_home_main"
            style="@style/ll_layout_indexmenu">
            <ImageView
                style="@style/iv_layout_indexmenu"
                android:id="@+id/iv_home_main"
                android:background="@drawable/tab_main_home_off"/>
            <TextView
                style="@style/tv_layout_indexmenu"
                android:id="@+id/tv_home_main"
                android:text="@string/main_index_home"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_moments_main"
            style="@style/ll_layout_indexmenu">
            <ImageView
                style="@style/iv_layout_indexmenu"
                android:id="@+id/iv_moments_main"
                android:background="@drawable/tab_main_moments_off"/>
            <TextView
                style="@style/tv_layout_indexmenu"
                android:id="@+id/tv_moments_main"
                android:text="@string/main_index_moments"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_order_main"
            style="@style/ll_layout_indexmenu">
            <ImageView
                style="@style/iv_layout_indexmenu"
                android:id="@+id/iv_order_main"
                android:background="@drawable/tab_main_order_off"/>
            <TextView
                style="@style/tv_layout_indexmenu"
                android:id="@+id/tv_order_main"
                android:text="@string/main_index_order"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_center_main"
            style="@style/ll_layout_indexmenu">
            <ImageView
                style="@style/iv_layout_indexmenu"
                android:id="@+id/iv_center_main"
                android:background="@drawable/tab_main_center_off"/>
            <TextView
                style="@style/tv_layout_indexmenu"
                android:id="@+id/tv_center_main"
                android:text="@string/main_index_center"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
