<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chengbiao.ricky.projectframe.fragment.HomeFragment"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_content_fragment_home"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@drawable/line_top">
        <LinearLayout
            android:id="@+id/ll_home_fragment_home"
            style="@style/ll_layout_indexmenu">
            <ImageView
                style="@style/iv_layout_indexmenu"
                android:id="@+id/iv_home_fragment_home"
                android:background="@drawable/tab_main_home_off"/>
            <TextView
                style="@style/tv_layout_indexmenu"
                android:id="@+id/tv_home_fragment_home"
                android:text="@string/main_index_home"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_moments_fragment_home"
            style="@style/ll_layout_indexmenu">
            <ImageView
                style="@style/iv_layout_indexmenu"
                android:id="@+id/iv_moments_fragment_home"
                android:background="@drawable/tab_main_moments_off"/>
            <TextView
                style="@style/tv_layout_indexmenu"
                android:id="@+id/tv_moments_fragment_home"
                android:text="@string/main_index_moments"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_order_fragment_home"
            style="@style/ll_layout_indexmenu">
            <ImageView
                style="@style/iv_layout_indexmenu"
                android:id="@+id/iv_order_fragment_home"
                android:background="@drawable/tab_main_order_off"/>
            <TextView
                style="@style/tv_layout_indexmenu"
                android:id="@+id/tv_order_fragment_home"
                android:text="@string/main_index_order"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_center_fragment_home"
            style="@style/ll_layout_indexmenu">
            <ImageView
                style="@style/iv_layout_indexmenu"
                android:id="@+id/iv_center_fragment_home"
                android:background="@drawable/tab_main_center_off"/>
            <TextView
                style="@style/tv_layout_indexmenu"
                android:id="@+id/tv_center_fragment_home"
                android:text="@string/main_index_center"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
